<resources>
    <string name="app_name">Lib.Upgrade.Bugly</string>

    <string name="upgrade_new_version">发现新版本</string>
    <string name="upgrade_ignore">忽略此版本</string>
    <string name="upgrade_feature_title">更新内容：</string>
    <string name="upgrade_now">立即更新</string>
    <string name="upgrade_cancel">下次再说</string>
    <string name="upgrade_welcome">各位学管老师，大家好！</string>
    <string name="upgrade_welcome_tips">雅典娜系统再次迎来了升级，欢迎大家使用新的版本。</string>
    <string name="upgrade_slogan">升级之路没有止境！</string>
</resources>
