<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <LinearLayout
        android:layout_width="266.7dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_upgrade_bg_up"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:tag="beta_title"
                android:text="@string/upgrade_new_version"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:minHeight="102dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginBottom="5dp"
                    android:focusable="true"
                    android:tag="beta_upgrade_info"
                    android:textColor="#cc464d5c"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="22dp"
                    android:text="更新说明："
                    android:textColor="#cc464d5c"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginBottom="15dp"
                    android:focusable="true"
                    android:tag="beta_upgrade_feature"
                    android:textColor="#cc464d5c"
                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>

        <!-- Ok & Cancel  Buttom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@mipmap/ic_upgrade_bg_down"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_upgrade"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:tag="beta_cancel_button"
                android:text="@string/upgrade_cancel"
                android:textColor="#464d5c"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_upgrade"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:tag="beta_confirm_button"
                android:text="@string/upgrade_now"
                android:textColor="#6069ff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
